--- a/web-dashboard/package.json
+++ b/web-dashboard/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^7.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.4",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
