--- a/web-dashboard/package.json
+++ b/web-dashboard/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.4",
     "encoding": "^0.1.13",
+    "long": "^5.3.2",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-auth": "^5.0.0-beta.30",
