--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "~54.0.33",
     "expo-camera": "~17.0.10",
+    "expo-image-manipulator": "~14.0.8",
     "expo-location": "~19.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
